feat: add banner

--- a/html-css-responsividade-mobile-first/styles/header.css
+++ b/html-css-responsividade-mobile-first/styles/header.css
@@ -5,6 +5,7 @@
     align-items: center;
     background-color: var(--branco);
     position: relative;
+    padding: 0 1em;
 }
 
 .cabeçalho__menu-hamburguer {
