--- a/html-css-responsividade-mobile-first/styles.css
+++ b/html-css-responsividade-mobile-first/styles.css
@@ -1,5 +1,6 @@
 @import url("styles/header.css");
 @import url("styles/banner.css");
+@import url("styles/carousel.css");
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
@@ -8,7 +9,7 @@
     --branco: #fff;
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
-
+    --azul: #002F52;
     --fonte-principal: 'Poppins', sans-serif;
 }
 
