--- a/html-css-responsividade-mobile-first/styles.css
+++ b/html-css-responsividade-mobile-first/styles.css
@@ -1,6 +1,9 @@
 @import url("styles/header.css");
 @import url("styles/banner.css");
 @import url("styles/carousel.css");
+@import url("styles/novidades.css");
+@import url("styles/recentes.css");
+@import url("styles/rodape.css");
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
