--- a/alurabooks/styles.css
+++ b/alurabooks/styles.css
@@ -6,6 +6,7 @@
 @import url("styles/rodape.css");
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
 
 :root {
     --cor-de-fundo: #EBECEE;
@@ -13,7 +14,9 @@
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --azul: #002F52;
+    --preto : #000000;
     --fonte-principal: 'Poppins', sans-serif;
+    --fonte-secundario: 'Josefin Sans', sans-serif;
 }
 
 body {
