--- a/alurabooks/styles/banner.css
+++ b/alurabooks/styles/banner.css
@@ -32,3 +32,22 @@
     color: var(--branco);
     background: url("../images/search-icon.svg") no-repeat 1em;
 }
+
+@media screen and (min-width: 1024px) {
+
+    .banner {
+        padding: 4.5em 3.5em;
+    }
+
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 5em;
+    }
+}
