--- a/alurabooks/styles/carousel.css
+++ b/alurabooks/styles/carousel.css
@@ -83,3 +83,40 @@
 .descrição__avaliação {
     padding: 0.5em 0;
 }
+
+@media screen and (min-width: 1024px) {
+
+    .carrossel__titulo {
+        width: 100%;
+        font-size: 26px;
+        padding-top: 2em;
+    }
+
+    .swiper {
+        width: 70%;
+    }
+
+    .swiper-slide {
+        margin: 0 1.5em;
+    }
+
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+
+    .swiper-button-prev, .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+    .carousel {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card {
+        width: 60%;
+        margin: 4em 0;
+    }
+}
