--- a/alurabooks/styles/header.css
+++ b/alurabooks/styles/header.css
@@ -60,3 +60,52 @@
 .container__botao {
     display: none;
 }
+
+.container__titulo {
+    display: none;
+}
+
+.opções {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+    .container__titulo {
+        display: block;
+        font-weight: 400;
+    }
+
+    .container__titulo-negrito {
+        font-weight: 700;
+    }
+
+    .opções {
+        display: flex;
+    }
+
+    .opções__item {
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+
+    .opções__link {
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .container__imagem-transparente,
+    .cabeçalho__menu-hamburguer {
+        display: none;
+    }
+
+    .opções__botao:checked~.lista-menu {
+        display: block;
+        width: auto;
+        top: 100%;
+        z-index: 2;
+    }
+
+    .opções__botao {
+        display: none;
+    }
+}
