--- a/alurabooks/styles/novidades.css
+++ b/alurabooks/styles/novidades.css
@@ -35,6 +35,31 @@
 .novidades__email::placeholder {
     font-family: var(--fonte-principal);
     color: var(--azul);
-    background: url("../images/Email.svg") no-repeat;
-    padding-left: 2em;
+    background: url("../images/Email.svg") no-repeat 1em;
+    padding-left: 3em;
+}
+
+@media screen and (min-width: 1024px) {
+    .novidades {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .novidades__texto {
+        margin-right: 1em;
+    }
+
+    .novidades__descrição {
+        width: 30%;
+        margin-right: 2em;
+    }
+
+    .novidades__email {
+        width: 30%;
+    }
+
+    .novidades__email::placeholder {
+        padding-left: 3.5em;
+    }
 }
