--- a/alurabooks/styles/banner.css
+++ b/alurabooks/styles/banner.css
@@ -51,3 +51,13 @@
         background-position: 5em;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .banner__pesquisa {
+        width: 35%;
+    }
+
+    .banner {
+        padding: 6em 0;
+    }
+}
