--- a/alurabooks/styles/novidades.css
+++ b/alurabooks/styles/novidades.css
@@ -63,3 +63,20 @@
         padding-left: 3.5em;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .novidades {
+        padding: 4em 0;
+    }
+
+    .novidades__titulo {
+        font-size: 24px;
+        font-weight: 500;
+    }
+
+    .novidades__texto {
+        font-size: 16px;
+        font-weight: 300;
+        padding: 0;
+    }
+}
