--- a/alurabooks/styles/recentes.css
+++ b/alurabooks/styles/recentes.css
@@ -48,3 +48,9 @@
         font-size: 24px;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .recentes {
+        padding: 3em 25vw;
+    }
+}
