--- a/alurabooks/styles/rodape.css
+++ b/alurabooks/styles/rodape.css
@@ -29,7 +29,7 @@ hr {
         text-transform: uppercase;
         font-size: 14px;
         color: var(--cinza-claro);
-        margin-bottom: 1em;
+        margin-bottom: 2em;
     }
 
     .rodapé__item {
@@ -43,5 +43,12 @@ hr {
         color: var(--cinza);
         font-size: 14px;
         margin-left: 1em;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .rodapé__lista {
+        border-left: 1px solid var(--cinza-claro);
+        padding-left: 1em;
     }
 }
