--- a/projeto-grid/assets/css/style.css
+++ b/projeto-grid/assets/css/style.css
@@ -1,5 +1,6 @@
 @import "destaques.css";
 @import "populares.css";
+@import "cabecalho.css";
 
 .app {
     background: #f1f1f1;
@@ -23,4 +24,7 @@
 
 .rodape {
   grid-area: rodape;
+  text-align: center;
+  background-color: #fdfdfd;
+  padding: 1rem;
 }
